[package]
name = "poor_keyboard_sounds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features=["full"] }
anyhow = "*"
rdev = "*"
rodio = "*"
serde = { version = "*", features=["derive"]  }
serde_json = "*"
